--- a/public/api.html
+++ b/public/api.html
@@ -348,6 +348,7 @@
     <div>APM: lịch hẹn</div>
     <div>WRT: bảo hành</div>
     <div>MT: bảo dưỡng</div>
+    <div>NTF: thông báo</div>
 </body>
 
 </html>
