--- a/public/api.html
+++ b/public/api.html
@@ -349,6 +349,11 @@
     <div>WRT: bảo hành</div>
     <div>MT: bảo dưỡng</div>
     <div>NTF: thông báo</div>
+
+    <h2>--------ADMIN--------</h2>
+    <div>tài khoản admin - bên web của chúng ta: </div>
+    <div>usernamel: admin-team-salon-oto</div>
+    <div>password: admin123abcDEF@@</div>
 </body>
 
 </html>
