--- a/public/api.html
+++ b/public/api.html
@@ -327,6 +327,7 @@
     Dùng để nhận token. Yêu cần phải đăng nhập.
     
     <h2> Phân quyền</h2>
+    Luôn phải truyền vô salonId.
     <li>[POST] /salons/user</li>
     Yêu cầu: là chủ salon. Cần truyền vô salonId. Dùng để lấy ra danh sách tất cả các nhân viên và quyền của họ.
     <li>[POST] /salons/permission</li>
