get all permission from admin

--- a/public/api.html
+++ b/public/api.html
@@ -355,6 +355,9 @@
     <div>tài khoản admin - bên web của chúng ta: </div>
     <div>usernamel: admin-team-salon-oto</div>
     <div>password: admin123abcDEF@@</div>
+
+    <li>[POST] /amin/</li>
+    Lấy ra danh sách tất cả các quyền. Hiện tại chưa cần điều kiện gì. Sau sẽ thêm vô vài điều kiện để kiểm tra mới cho lấy.
 </body>
 
 </html>
