--- a/public/api.html
+++ b/public/api.html
@@ -372,6 +372,9 @@
 
     <li>[POST]: /admin/logs</li>
     Lấy ra lịch sử hoạt động của salon. Yêu cầu truyền vô salonId, và cần đăng nhập với vai trò là chủ salon.
+    <li>[POST] /admin/db</li>
+    Yêu cầu đăng nhập với tài khoản admin team được cung cấp. API này dùng để lấy ra toàn bộ dữ liệu db hiện tại. Chỉ dùng cho giai đoạn phát triển.
+    Sau này sẽ hủy API.
 
 </body>
 
