--- a/public/api.html
+++ b/public/api.html
@@ -168,7 +168,7 @@
     <h2>Lịch hẹn</h2>
     <h3>User: Cần đăng nhập thành công.</h3>
     <li>[POST] /appointment/create-appointment</li>
-    cần truyền vô các thông tin: { "salonId": "6f15ea80-b5b5-4546-8cb3-08d3f6c45445","date": "2024-03-22 14:01:06.913+07","description": "lich hen voi salon 2"}
+    cần truyền vô các thông tin: { "salonId": "6f15ea80-b5b5-4546-8cb3-08d3f6c45445","date": "2024-03-22 14:01:06.913+07","description": "lich hen voi salon 2", "carId": "id car"}
     <li>[POST] /appointment/get-appoint-user</li>
     không truyền = get all.
     truyền vô id = get theo id.
