--- a/public/api.html
+++ b/public/api.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
+    
     <h1>API SERVER</h1>
+    <h3>Chú ý: Với các hành động liên quan đến quản lý salon như thêm nhân viên, thêm xe,... của salon - các hành động cần quyền
+        thì mới có thể làm được với salon thì cần gửi đi salonId. Vì cần thông tin này thì mới xác định được chính xác người đó có quyền gì.
+    </h3>
     <h2>AUTH</h2>
     <li>[POST] /auth/refresh</li>
     Cần truyền refreshToken vô bằng cookies - web or body - mobile để nhận lại token mới.
