update api docs for crawl news

--- a/public/api.html
+++ b/public/api.html
@@ -430,7 +430,9 @@
     </a>
     <div>Nếu không truyền vào thì mặc định là lấy ra trang đầu tiên và lấy ra 5 bài</div>
     <li>[GET] /articles/:id </li>
-    <div>Sẽ lấy ra nội dung của bài báo đó</div>
+    <div>Sẽ lấy ra nội dung của bài báo đó 
+        <b>(Khi hiển thị ngày ra tụi ông lấy cái publish nha, đừng lấy meta.publish)</b>
+    </div>
     <b>Có điểm cần chú ý chỗ này là</b> 
     <div>Nhiều khi nó ghi là caption nhưng nó lại là nội dung. Thì chắc tụi ông phải kiểm tra nếu caption nó ngắn thì nó mình hiển thị caption, còn không thì hiển thị giống nội dung
     .Cái này là do trang web nó vậy, có lúc nó kiểu vậy, lúc lại kiểu khác</div>
