--- a/public/api.html
+++ b/public/api.html
@@ -149,6 +149,7 @@
     <li>[DELETE] /cars/:id</li>
     Xóa xe khi biết id
 
+
     <h2>SALON</h2>
     <li>[GET] /salons</li>
     Lấy được hết tất cả các thông tin của salon
@@ -504,7 +505,10 @@ nhất thiết phải truyền vô hết các thuộc tính trong newWarranty.} 
     <li>[POST] /warranty/cancel</li>
     Dùng để hủy bỏ liên kết của 1 xe với 1 gói bảo hành. Yêu cầu truyền vô:
     {"salonId", "warrantyId", "carId"}
-    <h2></h2>
+    <h2>Hóa đơn</h2>
+    <li>[POST] /invoice/create-invoice</li>
+    Dùng để tạo ra hóa đơn phụ trách việc mua xe của khách hàng. Yêu cầu truyền vô:
+    {carId, salonId, note, fullname: tên khách hàng, email: email khách hàng, phone: sdt của khách hàng.}
 </body>
 
 </html>
