--- a/public/api.html
+++ b/public/api.html
@@ -374,6 +374,7 @@
     <div>WRT: bảo hành</div>
     <div>MT: bảo dưỡng</div>
     <div>NTF: thông báo</div>
+    <div>IV: hóa đơn</div>
 
     <h2>--------ADMIN--------</h2>
     <div>tài khoản admin - bên web của chúng ta: </div>
@@ -507,10 +508,12 @@ nhất thiết phải truyền vô hết các thuộc tính trong newWarranty.} 
     {"salonId", "warrantyId", "carId"}
     <h2>Hóa đơn</h2>
     <li>[POST] /invoice/create-invoice</li>
-    Dùng để tạo ra hóa đơn phụ trách việc mua xe của khách hàng. Yêu cầu truyền vô:
+    Dùng để tạo ra hóa đơn phụ trách việc mua xe của khách hàng. Yêu cầu chủ salon or nhân viên có quyền C_IV .Yêu cầu truyền vô:
     {carId, salonId, note, fullname: tên khách hàng, email: email khách hàng, phone: sdt của khách hàng.}
     <li>[POST] /invoice/lookup</li>
-    Dùng để tra cứu thông tin hóa đơn. Yêu cầu truyền vô: {"invoiceId", "salonId"}
+    Dùng để tra cứu thông tin hóa đơn. Yêu cầu là chủ salon or có quyền R_IV.Yêu cầu truyền vô: {"invoiceId", "salonId"}
+    <li>[POST] /invoice/all</li>
+    Xem tất cả danh sách toàn bộ hóa đơn của salon đó. Yêu cầu là chủ salon, or nhân viên có quyền R_IV. Truyền vô: {"salonId"}.
     <h3>Hóa đơn bảo dưỡng</h3>
     <li>[GET] /invoice</li>
     Nó sẽ lấy ra được thông tin tất cả các hóa đơn bảo dưỡng (xe gì, ai làm, tại salon nào và những dịch vụ đã thực hiện) 
