--- a/public/api.html
+++ b/public/api.html
@@ -511,7 +511,8 @@ nhất thiết phải truyền vô hết các thuộc tính trong newWarranty.} 
     Dùng để tạo ra hóa đơn phụ trách việc mua xe của khách hàng. Yêu cầu chủ salon or nhân viên có quyền C_IV .Yêu cầu truyền vô:
     {carId, salonId, note, fullname: tên khách hàng, email: email khách hàng, phone: sdt của khách hàng.}
     <li>[POST] /invoice/lookup</li>
-    Dùng để tra cứu thông tin hóa đơn. Yêu cầu là chủ salon or có quyền R_IV.Yêu cầu truyền vô: {"invoiceId", "salonId"}
+    Dùng để tra cứu thông tin hóa đơn. Yêu cầu là chủ salon or có quyền R_IV.Yêu cầu truyền vô: {"invoiceId", "salonId", "phone", "licensePlate", "type"}. nếu muốn tìm theo gì thì truyền vô cái đó.
+    salonId là bắt buộc. licensePlate: Biển số xe. type: loại giao dịch: "buy car", "maintenance". phone: sdt khách hàng.
     <li>[POST] /invoice/all</li>
     Xem tất cả danh sách toàn bộ hóa đơn của salon đó. Yêu cầu là chủ salon, or nhân viên có quyền R_IV. Truyền vô: {"salonId"}.
     <h3>Hóa đơn bảo dưỡng</h3>
