--- a/public/api.html
+++ b/public/api.html
@@ -517,7 +517,7 @@ nhất thiết phải truyền vô hết các thuộc tính trong newWarranty.} 
     Xem tất cả danh sách toàn bộ hóa đơn của salon đó. Yêu cầu là chủ salon, or nhân viên có quyền R_IV. Truyền vô: {"salonId"}.
     <h3>Hóa đơn bảo dưỡng</h3>
     <li>[GET] /invoice</li>
-    Nó sẽ lấy ra được thông tin tất cả các hóa đơn bảo dưỡng (xe gì, ai làm, tại salon nào và những dịch vụ đã thực hiện) 
+    Nó sẽ lấy ra được thông tin tất cả các hóa đơn bảo dưỡng (xe gì, ai làm và những dịch vụ đã thực hiện) tại salon mình
     <li>[GET] /invoice:/id</li>
     Lấy ra thông tin chi tiết của hóa đơn BẢO DƯỠNG
     <li>[GET] /invoice:/by-license/:licensePlate</li>
