--- a/public/api.html
+++ b/public/api.html
@@ -574,6 +574,18 @@ nhất thiết phải truyền vô hết các thuộc tính trong newWarranty.} 
     <div>fromDate là thống kê từ ngày fromDate đến nay.</div>
     Dữ liệu trả về: {status, "maintenances": {"invoiceDb": [{}, {}, danh sách invoice theo bảo trì], total: tổng tất cả chi phí bảo trì.},
     "buyCars": {"invoiceDb" : [{}, {}, danh sách invoice theo mua xe], total: tổng tất cả chi phí mua xe.}, total: tổng cả 2 chi phí trên cộng lại.}
+    Dữ liệu trả về có thêm: "year": {"january": {
+        "value": 1,
+        "total": 0
+    }, ... tháng 1 đến tháng 12}. Giá trị total là tổng theo từng tháng. còn value không cần quan tâm cũng được.; 
+    "avg": 840918.1666666666  Đây là giá trị trung bình cho mỗi tháng (tổng / 12).
+
+    nếu chưa có tk test:
+    đăng nhập: 
+    "username": "duyanh123",
+    "password": "123456".
+    <div>Lưu ý: thống kê theo năm. Thay vì truyền vô là năm 2024, thì truyền vô là ngày đầu tiên của năm là "2024-01-01". Năm - tháng - ngày.</div>
+
     <li>/invoice/statistics-admin</li>
     Thống kê doanh thu mua bán gói chức năng của hệ thống mình. yêu cầu là admin của hệ thống. Yêu cầu truyền vô: {"fromDate": "2024-04-21"}.
     Dữ liệu trả về: {status,  "purchaseDb": {purchases: [{}, {}, danh sách các giao dịch mua gói chức năng.], total: tổng tiền của tất cả giao dịch.}.}
