--- a/public/api.html
+++ b/public/api.html
@@ -570,7 +570,7 @@ nhất thiết phải truyền vô hết các thuộc tính trong newWarranty.} 
 
     <h2>Thống kê doanh thu</h2>
     <li>/invoice/statistics</li>
-    Thống kê doanh thu của salon đó. Cần có quyền R_IV or là chủ salon. Yêu cầu truyền vô: {"salonId", "fromDate": "2024-04-21"}.
+    Thống kê doanh thu của salon đó. Cần có quyền R_IV or là chủ salon. Yêu cầu truyền vô: {"salonId", "fromDate": "2024-04-21" kiểu string}.
     <div>fromDate là thống kê từ ngày fromDate đến nay.</div>
     Dữ liệu trả về: {status, "maintenances": {"invoiceDb": [{}, {}, danh sách invoice theo bảo trì], total: tổng tất cả chi phí bảo trì.},
     "buyCars": {"invoiceDb" : [{}, {}, danh sách invoice theo mua xe], total: tổng tất cả chi phí mua xe.}, total: tổng cả 2 chi phí trên cộng lại.}
