add avilable car

--- a/public/api.html
+++ b/public/api.html
@@ -140,8 +140,8 @@
     Thêm một xe mới. Các fields truyền vào bao gồm: name (Tên xe), description (Mô tả), origin (Xuất xứ), price
     (Giá), brand (Hãng xe), model (Mẫu mã xe), type (Dòng xe), capacity (Dung tích xe), door (Số cửa), seat (Số
     ghế ngồi), kilometer (Số km đã đi), gear (Hộp số), mfg (Năm sản xuất), inColor (Màu nội thất), outColor (Màu
-    ngoại thất), salonSalonId (Id Salon mà xe này thuộc về), image (tối đa là 5 file). Nếu price < 0 thì sẽ báo
-    lỗi
+    ngoại thất), salonSalonId (Id Salon mà xe này thuộc về), image (tối đa là 5 file), available: number - số lượng xe, không truyền thì mặc định là 1. Nếu price < 0 thì sẽ báo
+    lỗi.
     <li>[PATCH] /cars/:id</li>
     Truyền ở dạng form-data
     Sửa thông tin xe khi biết id. Các fields (giống post), muốn update cái nào thì truyền cái đó (Nếu price
